# currency_application

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml  pytest.ini
src/api/v1/: urls.py
src/api/v1/rates/: serializers.py  urls.py  views.py
src/apps/common/: middleware.py
src/apps/integrations/nbrb/: client.py  dto.py
src/apps/rates/: apps.py  models.py  selectors.py  services.py
src/apps/rates/management/commands/: sync_currencies.py
src/apps/rates/tests/: conftest.py  test_middleware.py  test_selectors.py  test_services.py  test_view.py
src/config/: settings.py  urls.py
